--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,23 @@ th {
 button {
   @apply cursor-pointer;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-bold;
+}
+
+h1 {
+  @apply text-3xl;
+}
+
+h2 {
+  @apply text-2xl;
+}
+
+h3 {
+  @apply text-xl;
+}
+
+h4 {
+  @apply text-lg;
+}
